--- a/2_jsp/src/main/webapp/WEB-INF/web.xml
+++ b/2_jsp/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,10 @@
 	    <welcome-file>default.htm</welcome-file>
     -->
   </welcome-file-list>
+  
+  <!-- 에러페이지 설정 -->
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/views/1_Basic/error500.jsp</location>
+  </error-page>
 </web-app>
